# MyGuildManager

./: .coveragerc  .env  .env.example  .gitignore  CACHE_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  COVERAGE.md  FINAL_OPTIMIZATION_REPORT.md  Makefile  README.md  SLASH_COMMANDS_REORGANIZATION.md  bot.py  cache.py  cache_loader.py  cleanup_cache_calls.py  config.py  db.py  final_cache_cleanup.py  functions.py  optimize_cache_loading.py  performance_profiler.py  pyrightconfig.json  rate_limiter.py  reliability.py  remove_useless_functions.py  requirements.txt  run_bot.bat  run_bot.py  run_tests_with_coverage.py  scheduler.py  schema_structure.sql  test_cache_optimization.py  translation.json  translation.py  translations.json
app/: __init__.py  __main__.py  bot.py  cache.py  cache_loader.py  config.py  db.py  scheduler.py
app/cogs/: __init__.py  absence.py  autorole.py  contract.py  core.py  dynamic_voice.py  epic_items_scraper.py  guild_attendance.py  guild_events.py  guild_groups_creation.py  guild_init.py  guild_members.py  guild_ptb.py  guild_statics.py  llm.py  loot_wishlist.py  notification.py  profile_setup.py
app/config/: translation.json
app/core/: __init__.py  functions.py  logger.py  performance_profiler.py  production_cache_agent.py  rate_limiter.py  reliability.py  translation.json  translation.py
cogs/: absence.py  autorole.py  contract.py  core.py  cron.py  dynamic_voice.py  epic_items_scraper.py  guild_attendance.py  guild_events.py  guild_init.py  guild_members.py  guild_ptb.py  health.py  llm.py  loot_wishlist.py  notification.py  performance_monitor.py  profile_setup.py  reliability_monitor.py
docs/: COVERAGE.md  EVOLUTIONS.md  STRUCTURE.md  TODO.md  database-configuration.md
scripts/: update_cog_imports.py
sql/schema/: schema_structure.sql
tests/: .coveragerc  README.md  README_TESTS.md  __init__.py  conftest.py  conftest_old.py  pyproject.toml  pytest.ini  requirements_test.txt  run_tests.py  test_cache.py  test_cache_loader.py  test_config.py  test_db.py  test_functions.py  test_guild_cogs.py  test_integration.py  test_missing_cogs.py  test_other_cogs.py  test_rate_limiter.py  test_reliability.py  test_runner.py  test_scheduler.py  test_simple.py  test_translation.py  test_translation_constants.py
tests/cogs/: __init__.py  test_absence.py  test_guild_members.py
tests/core/: __init__.py  test_functions.py  test_rate_limiter.py  test_translation.py
tests/integration/: __init__.py  test_translation_integration.py
tests/utils/: __init__.py  test_config.py
typings/discord/: __init__.pyi
